@@ -223,3 +223,8 @@
 2017-03-01 Fred Gleason <fredg@paravelsystems.com>
 	* Added an 'Include "ALL" in Filter Group' control to
 	rdadminb(1).
+2017-03-02 Fred Gleason <fredg@paravelsystems.com>
+	* Increased the size of the data preload in
+	'src/common/streamplayer_alsa.cpp'.
+	* Disabled direct cart-to-cart playing in
+	'src/rdlibraryb/rdlibraryb.cpp'.
